# insurance-risk-modeling

./: .gitignore  PROJECT_SETUP.md  README.md  main.py  pyproject.toml
data/reference/: annual_mileage_distribution.csv  claim_stats_reference.csv  driver_age_distribution.csv  region_frequency_adj.csv  region_pkw_distribution.csv  region_severity_adj.csv  region_vehicle_mix_adjustment.csv  vehicle_frequency_adj.csv  vehicle_severity_adj.csv  vehicle_type_distribution.csv
docs/: PROJECT_REVIEW.md  PROJECT_REVIEW_FULL.md  index.html  simulate_data.html
docs/notebooks_html/: 01a_reference_data_exploration.html  01b_data_simulation_validation.html  02_exploration.html  03_model_frequency.html  04_model_severity.html  05_combined_purepremium.html  06_business_evaluation.html
notebooks/: 01a_reference_data_exploration.ipynb  01b_data_simulation_validation.ipynb  02_exploration.ipynb  03_model_frequency.ipynb  04_model_severity.ipynb  05_combined_purepremium.ipynb  06_business_evaluation.ipynb
src/ins/: app_dashboard.py  simulate_data.py
